k8s/gatekeeper/k8srequiredlabels_template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata: { name: k8srequiredlabels }
spec:
  crd:
    spec:
      names: { kind: K8sRequiredLabels }
      validation:
        openAPIV3Schema:
          properties:
            labels: { type: array, items: { type: string } }
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels
      violation[{
        "msg": sprintf("missing required label: %v", [label]),
        "details": {"missing_label": label}
      }] {
        labels := input.review.object.metadata.labels
        required := input.parameters.labels
        label := required[_]
        not labels[label]
      }
